# sbbf

./: Cargo.toml  README.md
benches/: bench.rs
examples/: string.rs
src/: avx2.rs  lib.rs  sse.rs
