[package]
name = "sbbf"
version = "0.1.0"
edition = "2024"

[features]
default = ["avx"]
avx = []
sse = []

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
